playlist api, collector, node gateway etc

--- a/website/apps/alibrary/templates/alibrary/media/_list_item_xs.html
+++ b/website/apps/alibrary/templates/alibrary/media/_list_item_xs.html
@@ -1,6 +1,6 @@
 {% load calc i18n arating_tags %}
 
-				<div class="list_body_row selectable item published {{ item.uuid }}" id="list_item_75206">
+				<div class="list_body_row selectable item media published {{ item.uuid }}" id="list_item_{{ item.id }}" data-item_id="{{ item.id }}" >
 					<!-- Play icon -->
 					<div class="list_body_item c1 action">
 						<ul>
