--- a/website/apps/alibrary/templates/alibrary/templatetags/playlists_inline.html
+++ b/website/apps/alibrary/templates/alibrary/templatetags/playlists_inline.html
@@ -29,11 +29,11 @@
 		<div class="header">
 
 			<div class="right">
-				<a href="#393" title="Remove" data-action="delete" class="action delete"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Remove"></a>
+				<a href="#" title="Remove" data-action="delete" class="action delete"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Remove"></a>
 			</div>
 
 			<div class="right">
-				<a href="#393" title="Edit name" data-action="edit" class="action edit"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Edit name"></a>
+				<a href="#" title="Edit name" data-action="edit" class="action edit"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Edit name"></a>
 			</div>
 
 			<div class="right">
@@ -63,6 +63,7 @@
 			</div>
 			<div class="duration">
 				{{ object.duration }}
+				{{ object.target_duration }}000
 			</div>
 		</div>
 
