--- a/website/site-static/sass/site/_variables.sass
+++ b/website/site-static/sass/site/_variables.sass
@@ -28,7 +28,7 @@ $white: white !default
 // Accent colors
 $blue: #049cdb !default
 $blueDark: #0064cd !default
-$green: #46a546 !default
+$green: #00bb00 !default
 $red: #9d261d !default
 $yellow: #ffc40d !default
 $orange: #f89406 !default
