--- a/website/apps/alibrary/templates/alibrary/playlist/_tracklist_editor.html
+++ b/website/apps/alibrary/templates/alibrary/playlist/_tracklist_editor.html
@@ -1,5 +1,6 @@
-{% load sekizai_tags thumbnail i18n truncate verbatim %}
+{% load sekizai_tags thumbnail i18n truncate verbatim value_from_settings %}
 
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery-impromptu.js"></script>{% endaddtoblock %}
 {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}alibrary/js/lib/raphael-min.js"></script>{% endaddtoblock %}
 {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}alibrary/js/lib/soundmanager2/soundmanager2.js"></script>{% endaddtoblock %}
 {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}alibrary/js/lib/jquery.inputmask.js"></script>{% endaddtoblock %}
@@ -10,11 +11,15 @@
 <script>
 
 	var alibrary = alibrary || {};
+	var pusher = pusher || {};
 
 	$(function(){
 
+		pusher = new PusherApp;
+		pusher.socket_url = '{% value_from_settings "SOCKETIO_URL" %}';
+		pusher.init();
 		
-		alibrary.playlist_editor = new PlaylistEditor();;
+		alibrary.playlist_editor = new PlaylistEditor();
 		alibrary.playlist_editor.api_url = "{{ object.get_api_url }}";
 		// alibrary.playlist_editor.init();
 
@@ -242,6 +247,19 @@
 
 
 	<div class="list_header">
+
+		<div class="row-fluid">
+
+			<div class="span12">
+				
+				<ul class="unstyled horizontal" id="editor_mode_switch">
+					<li>{% trans "Display"%}</li>
+					<li><a data-mode="extended" href="#"><i class="icon-th-list"></i></a></li>
+					<li><a data-mode="condensed" href="#"><i class="icon-list"></i></a></li>
+				</ul>
+							
+			</div>
+		</div>
 
 		<div class="row-fluid">
 
