--- a/website/apps/aplayer/templates/aplayer/_common_script.html
+++ b/website/apps/aplayer/templates/aplayer/_common_script.html
@@ -5,7 +5,7 @@
 	{% addtoblock "js-head" %}<script>window.jQuery || document.write('<script src="{{ STATIC_URL }}js/lib/jquery-1.8.1.min.js"><\/script>')</script>{% endaddtoblock %}
 
 	<!-- js-head, rendered in head :) block -->
-	{% addtoblock "js-head" %}<!--<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery-1.8.1.min.js"></script>-->{% endaddtoblock %}
+	{% addtoblock "js-head" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery-ui-1.9.2.custom.min.js"></script>{% endaddtoblock %}
 
 	
 	<!-- base css block -->
