--- a/website/apps/aplayer/templates/aplayer/base.html
+++ b/website/apps/aplayer/templates/aplayer/base.html
@@ -28,8 +28,16 @@
 	{% endblock %}
 
 
+
+
+
+
 	<!-- main javascript block -->
 	{% render_block "js" %}
+	
+	
+	<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jwplayer/jwplayer-5.9.js"></script>
+	<script type="text/javascript" src="{{ STATIC_URL }}alibrary/js/playlist.js"></script>
 	
 	<script type="text/javascript">
 		//<![CDATA[//><!--
@@ -44,20 +52,10 @@
 		parent_win = window.opener;
 		
 		$(document).ready(function() {
-
-				
-			
 			
 			// set some variables to be available in script file
 			aplayer.vars.swf_url = '{{ STATIC_URL }}swf/lib/jwplayer/jwplayer-5.9.swf';
 			aplayer.vars.skin_url = '{{ STATIC_URL }}css/lib/jwplayer/ulysses.zip';
-			
-			
-			//asite.vars.aplayer_width = 630;
-			//asite.vars.aplayer_height = 630;
-			
-			// create interface
-			// asite.ui.init();
 			
 			base.ui.init();
 			base.ui.iface();
@@ -65,6 +63,21 @@
 			aplayer.base.init();
 			aplayer.ui.init();
 			aplayer.ui.playhead();
+			
+			// collector
+			aplayer.collector = new CollectorApp;
+			// aplayer.collector.use_effects = false;
+			aplayer.collector.animation_target = 'footer';
+			aplayer.collector.api_url = "{% url api_dispatch_list resource_name='playlist' api_name='v1'%}";
+			aplayer.collector.init();
+			
+			// selector
+			aplayer.selector = new PlaylistSelector();
+			aplayer.selector.interval_duration = 10000;
+			aplayer.selector.dom_id = 'playlists_inline_selector';
+			aplayer.selector.api_url_simple = "{% url api_dispatch_list resource_name='simpleplaylist' api_name='v1'%}";
+			aplayer.selector.init();
+			
 			
 		});
 		//--><!]]>
