--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -1,4 +1,4 @@
-{% load sekizai_tags %}
+{% load sekizai_tags value_from_settings %}
 
 	<!-- load jquery from cdn, fallback if neccessary -->
 	{% addtoblock "js-head" %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>{% endaddtoblock %}
@@ -81,8 +81,10 @@
 	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}ac_tagging/js/ac_tagging.js"></script>{% endaddtoblock %}
 	
+	{% addtoblock "js-post" %}<script src="{% value_from_settings "SOCKETIO_URL" %}socket.io/socket.io.js"></script>{% endaddtoblock %}
 	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/apps/arating.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}pusher/js/pusher.js"></script>{% endaddtoblock %}
 	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util.base.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/base.ui.js"></script>{% endaddtoblock %}
